[Authentication] Adding constraints for password (min/max length only for now), and adding tooltips for the user